[package]
name = "glidesort"
version = "0.1.2"
edition = "2021"
authors = ["Orson Peters <orsonpeters@gmail.com>"]
description = "Glidesort sorting algorithm"
repository = "https://github.com/orlp/glidesort"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["algorithm", "sort", "sorting"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]

[features]
tracking = ["lazy_static"]
unstable = []

[profile.release]
lto = "thin"